adding nodejs server stub
